Update Store.java
Changes for Java 11